[package]
name = "sf-plugin-template"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["bevy_ui"] }
dyn-clone = { workspace = true }
thiserror = { workspace = true }
bevy_reflect = { version = "0.14.2", features = ["bevy"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
