[package]
name = "sf-plugin-template"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["bevy_ui"] }
dyn-clone = { workspace = true }
thiserror = { workspace = true }
bevy_reflect = { workspace = true, features = ["bevy"] }

# These are only needed for UI/plugin dev, not for the cdylib
[dev-dependencies]
bevy = { workspace = true }
dyn-clone = { workspace = true }
thiserror = { workspace = true }
bevy_reflect = { workspace = true, features = ["bevy"] }

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
