[package]
name = "sf-plugin-template"
version = "0.1.0"
edition = "2021"
description = "Template for StrategyForge plugins"
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Bevy - Using features from workspace
bevy = { workspace = true }

# Core Dependencies
thiserror = { workspace = true }
dyn-clone = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }

[dev-dependencies]
# Testing dependencies - using workspace Bevy with default features
bevy = { workspace = true }

